# orion-IDE

./: .coverage  .env  .env.example  .env.fork.example  .gitignore  .pyre_configuration  alembic.ini  audit.sh  audit2.sh  audit3.sh  commit_all.py  coverage.xml  eslint.config.js  generate_audit.py  generate_audit_filtered.py  generate_audit_small.py  orion.db  out.txt  package-lock.json  package.json  product.json  pyproject.toml  pyrightconfig.json  result.txt  result10.txt  result2.txt  result3.txt  result4.txt  result5.txt  result6.txt  result_default_agent.txt  tsc_errors.txt  verify_context.py  verify_context_2.py  verify_schemas.py
.github/workflows/: backend.yml
extensions/orion-core/: orion-core-1.0.0.vsix  package-lock.json  package.json  tsconfig.json
orion/: main.py
orion/agents/: backend.py  base.py  database.py  devops.py  docs.py  frontend.py  single.py  testing.py
orion/api/: chat.py  health.py  memory.py  metrics_endpoint.py  pipeline.py  router.py  search.py  settings.py  ws.py
orion/core/: cleanup.py  config.py  database.py  dependencies.py  lifespan.py  metrics.py  redis_client.py  resilience.py
orion/llm/: config.py  manager.py  mock.py
orion/mcp/: dispatcher.py
orion/models/: agent_execution.py  checkpoint.py  cost_tracking.py  iisg.py  memory.py  pattern.py  run.py  session.py  validation.py
orion/pipeline/: base_component.py  context.py  runner.py
orion/schemas/: agent.py  checkpoint.py  iisg.py  intent.py  pipeline.py  settings.py  skills.py  stack.py  validation.py
scripts/: code.sh
src/: tsconfig.json
(+104 files in other folders)
