[tool.poetry]
name = "orion"
version = "0.1.0"
description = "Orion IDE Backend"
authors = ["Author <author@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115"
uvicorn = {extras = ["standard"], version = "^0.32"}
websockets = "^13.0"
pydantic = "^2.9"
pydantic-settings = "^2.6"
sqlalchemy = {extras = ["asyncio"], version = "^2.0"}
asyncpg = "^0.30"
alembic = "^1.14"
pgvector = "^0.3"
redis = {extras = ["hiredis"], version = "^5.2"}
litellm = "^1.55"
tree-sitter = "^0.23"
tree-sitter-python = "^0.23"
tree-sitter-typescript = "^0.23"
tree-sitter-javascript = "^0.23"
prometheus-client = "^0.24.1"
aiosqlite = "^0.22.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-asyncio = "^0.24"
pytest-cov = "^6.0"
httpx = "^0.28"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
